--- a/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -57,11 +58,11 @@
                                 </stackView>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="quc-Rg-Lkk" userLabel="email" customClass="ProfileTextEnterView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="20" y="136.5" width="335" height="80"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="20" y="231.5" width="335" height="297.5"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="84.5" y="544" width="206" height="44"/>
@@ -101,7 +102,7 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="AEn-1F-Urt"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="UVa-ce-PgV" secondAttribute="trailing" id="Fpb-xR-pf8"/>
                 <constraint firstItem="jzz-bl-nJl" firstAttribute="width" secondItem="tLh-dZ-YLw" secondAttribute="width" id="Jx7-Ow-moW"/>
@@ -115,9 +116,6 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="itemSeperator">
-            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
