--- a/Depo/Depo/Presentation/UserStories/Start/IdentityVerification/VerificationMethodTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/IdentityVerification/VerificationMethodTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -47,6 +48,7 @@
                     <constraint firstAttribute="bottom" secondItem="nT6-sc-1ZV" secondAttribute="bottom" constant="8" id="kcz-xB-Xzc"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" name="primaryBackground"/>
             <connections>
                 <outlet property="contentLabel" destination="Pgn-no-49U" id="h1V-QJ-thU"/>
                 <outlet property="methodNameLabel" destination="O5r-7F-Kf4" id="uqW-Pc-d5G"/>
@@ -57,5 +59,8 @@
     </objects>
     <resources>
         <image name="emtyRectangle" width="22" height="22"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
