--- a/Depo/Depo/Presentation/UserStories/Start/ResetPassword/ResetPasswordViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ResetPassword/ResetPasswordViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -63,7 +64,7 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="OaT-Ko-m7a"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="z0F-Pp-O67" firstAttribute="height" secondItem="phN-ta-awE" secondAttribute="height" id="JRG-t3-TCl"/>
                 <constraint firstItem="z0F-Pp-O67" firstAttribute="width" secondItem="phN-ta-awE" secondAttribute="width" id="SsS-15-JZ1"/>
@@ -78,4 +79,9 @@
             <point key="canvasLocation" x="-672.46376811594212" y="49.553571428571423"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
