--- a/Depo/Depo/Presentation/UserStories/Start/ValidateSecurityQuestion/ValidateSecurityQuestionViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ValidateSecurityQuestion/ValidateSecurityQuestionViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -61,7 +62,7 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="50Q-o5-sBl"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="bWc-Aa-dEW" firstAttribute="height" secondItem="aeb-C6-zyV" secondAttribute="height" id="7MA-i1-JwC"/>
                 <constraint firstItem="HnN-EC-hzr" firstAttribute="centerX" secondItem="aeb-C6-zyV" secondAttribute="centerX" id="JXW-4U-WUf"/>
@@ -76,4 +77,9 @@
             <point key="canvasLocation" x="-672.46376811594212" y="49.553571428571423"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
