--- a/Depo/Depo/Presentation/SubViews/CollectionViewHeaders/CollectionViewSimpleHeaderWithText.xib
+++ b/Depo/Depo/Presentation/SubViews/CollectionViewHeaders/CollectionViewSimpleHeaderWithText.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -34,6 +35,13 @@
                         <constraint firstAttribute="height" constant="22" id="e7r-jt-eQF"/>
                     </constraints>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tVI-Tb-mci">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="2"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="2" id="yia-T0-Jqe"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
@@ -42,17 +50,25 @@
                 <constraint firstItem="eaJ-sQ-cG9" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="C6R-dK-Em6"/>
                 <constraint firstAttribute="bottom" secondItem="eaJ-sQ-cG9" secondAttribute="bottom" id="M2E-08-eQG"/>
                 <constraint firstItem="vPB-Pu-PYL" firstAttribute="centerY" secondItem="U6b-Vx-4bR" secondAttribute="centerY" id="MJ6-Qt-92Z"/>
+                <constraint firstItem="tVI-Tb-mci" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="V39-1y-ohw"/>
                 <constraint firstItem="eaJ-sQ-cG9" firstAttribute="trailing" secondItem="vPB-Pu-PYL" secondAttribute="trailing" id="de3-t0-Led"/>
+                <constraint firstItem="tVI-Tb-mci" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="oOU-3F-Fkz"/>
                 <constraint firstItem="q94-GH-gZn" firstAttribute="centerY" secondItem="U6b-Vx-4bR" secondAttribute="centerY" id="pRj-74-ZwC"/>
                 <constraint firstItem="eaJ-sQ-cG9" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="rzf-vp-fFT"/>
                 <constraint firstItem="q94-GH-gZn" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="15" id="wuW-et-ROy"/>
+                <constraint firstAttribute="trailing" secondItem="tVI-Tb-mci" secondAttribute="trailing" id="xcY-Ge-TRg"/>
             </constraints>
             <connections>
                 <outlet property="labelForTitle" destination="q94-GH-gZn" id="jcX-yh-EZH"/>
                 <outlet property="selectionImageView" destination="vPB-Pu-PYL" id="Szk-ce-dPw"/>
                 <outlet property="selectionView" destination="eaJ-sQ-cG9" id="OEJ-uQ-f6R"/>
             </connections>
-            <point key="canvasLocation" x="34" y="101"/>
+            <point key="canvasLocation" x="33.600000000000001" y="100.74962518740631"/>
         </collectionReusableView>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
