--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/FileInfoPeopleView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/FileInfoPeopleView.xib
@@ -51,7 +51,7 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
-                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="80" id="duV-T4-GUj"/>
                                                 <constraint firstItem="iPX-iw-z4B" firstAttribute="centerX" secondItem="N4c-Wd-Crm" secondAttribute="centerX" id="mFQ-Qz-1Ba"/>
