--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/InvitationViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/InvitationViewController.xib
@@ -36,6 +36,7 @@
                 </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="gqa-se-gUH" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="9Tf-mp-edu"/>
                 <constraint firstItem="gqa-se-gUH" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="aKr-9P-bc0"/>
@@ -48,6 +49,9 @@
     <resources>
         <namedColor name="fileGreedCellColorSecondary">
             <color red="0.96899998188018799" green="0.96899998188018799" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
