--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
@@ -44,7 +44,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="PbB-FE-kg4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0lM-mc-FKG"/>
                 <constraint firstAttribute="trailing" secondItem="PbB-FE-kg4" secondAttribute="trailing" id="fMR-41-CjY"/>
