--- a/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsInfoViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsInfoViewController.xib
@@ -37,7 +37,7 @@
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="16S-4E-sIn" customClass="IntrinsicTextView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="384" height="329"/>
-                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <color key="backgroundColor" name="secondaryBackground"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" priority="250" constant="329" id="dGw-Yg-DRS"/>
                                             </constraints>
@@ -69,7 +69,7 @@
                             <rect key="frame" x="346" y="8" width="30" height="30"/>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="2MQ-qj-fo6" secondAttribute="trailing" id="9h6-Uy-A4h"/>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="500" id="AXg-sq-eon"/>
@@ -121,14 +121,11 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="primaryBackground">
+        <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
