--- a/Depo/Depo/Presentation/SubViews/FullOfQuotaPopUps/LargePopUp/LargeFullOfQuotaPopUp.xib
+++ b/Depo/Depo/Presentation/SubViews/FullOfQuotaPopUps/LargePopUp/LargeFullOfQuotaPopUp.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -206,7 +207,7 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="secondaryBackground"/>
                                             <constraints>
                                                 <constraint firstItem="Fz8-5k-vvp" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Cmz-ke-uAQ" secondAttribute="leading" constant="10" id="07l-Ni-WHZ"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hNa-DH-6mO" secondAttribute="trailing" constant="10" id="0X1-tV-jdV"/>
@@ -235,7 +236,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="secondaryBackground"/>
                                     <constraints>
                                         <constraint firstItem="eO0-IT-2fp" firstAttribute="top" secondItem="UjI-IO-v9x" secondAttribute="top" id="0w3-jx-X1O"/>
                                         <constraint firstAttribute="height" constant="607" id="7RN-Tx-nAc"/>
@@ -334,5 +335,8 @@
         <image name="CardIconLampWhite" width="78" height="72"/>
         <image name="CloseCardIconWhite" width="14" height="14"/>
         <image name="checkMarkDarkBlueIcon" width="14" height="11"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
