--- a/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncSwitcherTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncSwitcherTableViewCell.xib
@@ -19,6 +19,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="autoSync" translatesAutoresizingMaskIntoConstraints="NO" id="aML-HQ-bLC">
                         <rect key="frame" x="19" y="10.5" width="23" height="16"/>
+                        <color key="tintColor" name="blackColor"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="CSf-z8-Lzn">
                         <rect key="frame" x="50" y="8" width="41.5" height="20.5"/>
@@ -70,6 +71,9 @@
     </objects>
     <resources>
         <image name="autoSync" width="23" height="16"/>
+        <namedColor name="blackColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
