--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationCampaignDetailView/InvitationCampaignDetailView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationCampaignDetailView/InvitationCampaignDetailView.xib
@@ -62,7 +62,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" name="primaryBackground"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstItem="RvJ-mw-LaC" firstAttribute="top" secondItem="HRe-eH-6H8" secondAttribute="top" constant="15" id="0Xz-7t-ewi"/>
                                 <constraint firstAttribute="height" constant="77" id="4kP-i4-UEz"/>
@@ -71,16 +71,16 @@
                                 <constraint firstAttribute="bottom" secondItem="RvJ-mw-LaC" secondAttribute="bottom" constant="15" id="rc0-S8-QCB"/>
                             </constraints>
                         </view>
-                        <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kLB-Gx-tmk">
+                        <wkWebView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kLB-Gx-tmk">
                             <rect key="frame" x="8" y="152" width="297" height="328"/>
-                            <color key="backgroundColor" name="primaryBackground"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <wkWebViewConfiguration key="configuration">
                                 <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                 <wkPreferences key="preferences"/>
                             </wkWebViewConfiguration>
                         </wkWebView>
                     </subviews>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="313" id="8zn-Uv-i7c">
                             <variation key="heightClass=regular-widthClass=regular" constant="391"/>
@@ -129,7 +129,7 @@
         <namedColor name="marineTwoAndTealish">
             <color red="0.024000000208616257" green="0.17299999296665192" blue="0.2630000114440918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="primaryBackground">
+        <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
