--- a/Depo/LifeboxFileProviderUI/Presentation/Base.lproj/MainInterface.storyboard
+++ b/Depo/LifeboxFileProviderUI/Presentation/Base.lproj/MainInterface.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wsw-lz-BVg">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wsw-lz-BVg">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,32 +12,32 @@
         <!--Document Action View Controller-->
         <scene sceneID="EZF-nf-i2z">
             <objects>
-                <viewController id="wsw-lz-BVg" customClass="DocumentActionViewController" customModule="LifeboxFileProviderUI" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="wsw-lz-BVg" customClass="DocumentActionViewController" customModule="BilloProviderUI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="j94-Uc-b4p">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Apx-dM-wWR">
-                                <rect key="frame" x="20" y="264" width="280" height="21"/>
+                                <rect key="frame" x="20" y="244" width="280" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h3r-kz-zfp">
-                                <rect key="frame" x="20" y="305" width="280" height="21"/>
+                                <rect key="frame" x="20" y="284.5" width="280" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lifebox_big" translatesAutoresizingMaskIntoConstraints="NO" id="OOJ-AJ-7zx">
-                                <rect key="frame" x="80" y="84" width="160" height="160"/>
+                                <rect key="frame" x="80" y="64" width="160" height="160"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="160" id="JXs-cW-ugV"/>
                                     <constraint firstAttribute="width" secondItem="OOJ-AJ-7zx" secondAttribute="height" multiplier="1:1" id="iSw-Wq-wxn"/>
                                 </constraints>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AsW-74-F26">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <items>
                                     <navigationItem id="eKx-tf-ihT">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="6yJ-pv-0yz">
@@ -50,7 +49,8 @@
                                 </items>
                             </navigationBar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="LtW-2D-zeT"/>
+                        <color key="backgroundColor" name="primaryBackground"/>
                         <constraints>
                             <constraint firstItem="AsW-74-F26" firstAttribute="leading" secondItem="LtW-2D-zeT" secondAttribute="leading" id="Bcx-dm-V0N"/>
                             <constraint firstItem="Apx-dM-wWR" firstAttribute="top" secondItem="OOJ-AJ-7zx" secondAttribute="bottom" constant="20" id="LP1-E9-20y"/>
@@ -64,7 +64,6 @@
                             <constraint firstItem="h3r-kz-zfp" firstAttribute="top" secondItem="Apx-dM-wWR" secondAttribute="bottom" constant="20" id="nec-TQ-2bt"/>
                             <constraint firstItem="Apx-dM-wWR" firstAttribute="leading" secondItem="LtW-2D-zeT" secondAttribute="leading" constant="20" id="wBI-sg-n6l"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="LtW-2D-zeT"/>
                     </view>
                     <navigationItem key="navigationItem" id="KrM-cy-r2t">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="63f-iE-NGQ"/>
@@ -75,7 +74,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aJJ-cY-8O6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <customObject id="4Fi-8T-ELG" customClass="DocumentActionCustomizator" customModule="LifeboxFileProviderUI" customModuleProvider="target">
+                <customObject id="4Fi-8T-ELG" customClass="DocumentActionCustomizator" customModule="BilloProviderUI" customModuleProvider="target">
                     <connections>
                         <outlet property="messageLabel" destination="h3r-kz-zfp" id="AZF-WT-fGS"/>
                         <outlet property="titleLabel" destination="Apx-dM-wWR" id="6TS-hH-KUf"/>
@@ -86,6 +85,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="lifebox_big" width="150" height="150"/>
+        <image name="lifebox_big" width="69" height="72"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
